# Biblioteca_API

./: .coverage  README.md  biblioteca.db  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: b1b996635e8b_este_é_mais_um_teste.py
config/: .env  database.py  logging_config.py
models/: models.py
routes/: autor_routes.py  categoria_routes.py  emprestimo_routes.py  livro_routes.py  perfil_usuario_routes.py  usuario_routes.py
schemas/: schemas.py
services/: autor_service.py  categoria_service.py  emprestimo_service.py  livro_service.py  perfil_usuario_service.py  usuario_service.py
